# blog-factory-posts

./: .env.example  .gitignore  CLAUDE.md  README.md  hugo.yaml  pyproject.toml  test-blogscript-pipeline.mjs  test-blogscript.json
.claude/: ralph-loop.local.md
.claude/workflows/: post-enhancement.md
.github/workflows/: deploy-astro.yml  hugo.yaml
.mcp/: mcp.json
agent/: __init__.py  config.py  content_enricher.py  executor.py  main.py  models.py  orchestrator.py  telegram.py
agent/prompts/: publisher.md  researcher.md  writer.md
astro-blog/: BLOGSCRIPT_GUIDE.md  astro.config.ts  components.json  package-lock.json  package.json  pnpm-lock.yaml
astro-blog/.claude/: ralph-loop.local.md
astro-blog/.github/workflows/: deploy.yml
astro-blog/src/: config.ts
astro-blog/src/components/: BackButton.astro  Breadcrumb.astro  Card.astro  Header.astro  Tag.astro
astro-blog/src/layouts/: Layout.astro  PostDetails.astro
astro-blog/src/pages/: 404.astro  entity-image-demo.astro  index.astro  rss.xml.ts  smart-image-demo.astro  widgets.astro
content/: search.md
content/posts/: 2025-12-25-hello-world.md  2025-12-26-ai-agents-2025-complete-guide.md  2025-12-26-korea-ai-basic-act.md  2025-12-26-vibe-coding-guide.md  2025-12-26-viral-memes-2025-review.md
data/: claude-progress.txt  feature_list.json
data/published/: 2025-12-26.json
data/topics/: 2025-12-26-00.json
docs/: API_SETUP_GUIDE.md  SETUP.md  blog-framework-analysis.md
scripts/: init.sh
tests/: __init__.py  conftest.py  test_mcp_integration.py  test_project_structure.py
(+100 files in other folders)
