[project]
name = "blog-factory"
version = "0.1.0"
description = "Autonomous viral content production system with multi-agent orchestration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "seolcoding", email = "seolcoding@gmail.com" }
]
keywords = [
    "blog",
    "content-generation",
    "multi-agent",
    "claude",
    "mcp",
    "autonomous",
    "viral-content",
]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
agent = [
    "anthropic>=0.40.0",
]
blog = [
    "markdown>=3.5.0",
    "pyyaml>=6.0.0",
    "python-frontmatter>=1.0.0",
]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.8.0",
]
all = [
    "blog-factory[agent,blog,dev]",
]

[project.scripts]
blog-factory = "agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "RUF"]
ignore = ["E501"]
